js added for edit and delete

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ nav ul .homebar,
   padding: 0px 10px;
 }
 
-.witweet {
+.tweet-post-text {
   background-color: var(--black);
   border: 0;
   color: white;
